# django-projects

./: .clinerules  .example.env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: mypy.yml  tests.yml
app/: __init__.py  admin.py  apps.py  context_processors.py  custom_static.py  forms.py  middleware.py  models.py  signals.py  urls.py  views.py
app/management/: __init__.py
app/management/commands/: __init__.py  collectstatic.py
app/migrations/: 0001_initial.py  0002_tag_project_tags.py  0003_contactsubmission_alter_tag_options.py  0004_githubstats.py  0005_siteconfiguration_alter_githubstats_options.py  0006_siteconfiguration_hero_info_and_more.py  0007_rename_site_title_siteconfiguration_hero_title_and_more.py  0008_framework_language.py  0009_project_priority.py  0010_aboutsection.py
app/services/: __init__.py  email.py  github.py
app/templatetags/: __init__.py  app_extras.py
assets/css/: site.css  source.css  tailwind.css
assets/js/: captcha-theme.js  projects.js  site.js  tag-filter.js  theme.js
config/: __init__.py  settings.py  urls.py
config/gunicorn/: __init__.py  dev.py  prod.py
templates/: 400.html  403.html  404.html  500.html  _footer.html  _header.html  base.html
templates/app/: _about.html  _base.html  _contact.html  _header.html  _hero.html  _load_more_section.html  _project_card.html  _projects.html  _projects_grid.html  _projects_grid_items.html  _show_more_button.html  base.html  contact_success.html  footer.html  home.html
templates/app/email/: contact_form.txt
templates/cotton/: button.html
templates/cotton/dropdown_menu/: content.html  item.html  trigger.html
tests/: __init__.py  conftest.py
tests/admin/: __init__.py  test_admin.py
tests/context_processors/: __init__.py  test_javascript.py
tests/forms/: __init__.py  test_contact_form.py
tests/management/commands/: __init__.py  test_collectstatic.py
tests/middleware/: __init__.py  test_ip_admin_restrict_middleware.py
tests/models/: __init__.py  test_about_section.py  test_contact_submission.py  test_framework.py  test_github_stats.py  test_language.py  test_project.py  test_site_configuration.py  test_tag.py
tests/services/: __init__.py  test_email_service.py  test_github_service.py
tests/templatetags/: __init__.py  test_app_extras.py
tests/urls/: __init__.py  test_urls.py
tests/views/: __init__.py  test_contact_success_view.py  test_home_view.py  test_load_more_projects.py
